tdf#89806 : Fixed background fill export for table cell.

1. Table cell properties were exproted empty if file
     saved as .pptx file.
  2. Now added code to export table cell fill properties
     in 'tcPr'(Table cell properties xml tag)
  3. Added unit test to check exported table cell fill
     properties.

Change-Id: Ica6005a65c7eefb8629c808f2a54764f98badb11